dataset1235/2025-2/2868285114/users/262170254/executions/3071719669_1417620616.log
== RUN (2025-08-28 22:10:20)
-- CODE: 
pesos = int(input())

valoR = pesos *0.47
print(round(valorR,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
6
---- correct output:
2.82
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(valorR,2))
                ^^^^^^
NameError: name 'valorR' is not defined. Did you mean: 'valoR'?
-- TEST CASE 2:
---- input:
15
---- correct output:
7.05
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(valorR,2))
                ^^^^^^
NameError: name 'valorR' is not defined. Did you mean: 'valoR'?
-- TEST CASE 3:
---- input:
9
---- correct output:
4.23
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(valorR,2))
                ^^^^^^
NameError: name 'valorR' is not defined. Did you mean: 'valoR'?
-- TEST CASE 4:
---- input:
35
---- correct output:
16.45
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(valorR,2))
                ^^^^^^
NameError: name 'valorR' is not defined. Did you mean: 'valoR'?
-- TEST CASE 5:
---- input:
21
---- correct output:
9.87
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(valorR,2))
                ^^^^^^
NameError: name 'valorR' is not defined. Did you mean: 'valoR'?
-- TEST CASE 6:
---- input:
2
---- correct output:
0.94
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(valorR,2))
                ^^^^^^
NameError: name 'valorR' is not defined. Did you mean: 'valoR'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 22:08:38)
-- CODE: 
pesos = int(ipu())

valor = pesos *0.28
print(round(valorR,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
6
---- correct output:
2.82
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    pesos = int(ipu())
                ^^^
NameError: name 'ipu' is not defined
-- TEST CASE 2:
---- input:
15
---- correct output:
7.05
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    pesos = int(ipu())
                ^^^
NameError: name 'ipu' is not defined
-- TEST CASE 3:
---- input:
9
---- correct output:
4.23
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    pesos = int(ipu())
                ^^^
NameError: name 'ipu' is not defined
-- TEST CASE 4:
---- input:
35
---- correct output:
16.45
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    pesos = int(ipu())
                ^^^
NameError: name 'ipu' is not defined
-- TEST CASE 5:
---- input:
21
---- correct output:
9.87
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    pesos = int(ipu())
                ^^^
NameError: name 'ipu' is not defined
-- TEST CASE 6:
---- input:
2
---- correct output:
0.94
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    pesos = int(ipu())
                ^^^
NameError: name 'ipu' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 22:08:57)
-- CODE: 
pesos = int(input())

valor = pesos *0.28
print(round(valorR,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
6
---- correct output:
2.82
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(valorR,2))
                ^^^^^^
NameError: name 'valorR' is not defined. Did you mean: 'valor'?
-- TEST CASE 2:
---- input:
15
---- correct output:
7.05
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(valorR,2))
                ^^^^^^
NameError: name 'valorR' is not defined. Did you mean: 'valor'?
-- TEST CASE 3:
---- input:
9
---- correct output:
4.23
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(valorR,2))
                ^^^^^^
NameError: name 'valorR' is not defined. Did you mean: 'valor'?
-- TEST CASE 4:
---- input:
35
---- correct output:
16.45
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(valorR,2))
                ^^^^^^
NameError: name 'valorR' is not defined. Did you mean: 'valor'?
-- TEST CASE 5:
---- input:
21
---- correct output:
9.87
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(valorR,2))
                ^^^^^^
NameError: name 'valorR' is not defined. Did you mean: 'valor'?
-- TEST CASE 6:
---- input:
2
---- correct output:
0.94
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(valorR,2))
                ^^^^^^
NameError: name 'valorR' is not defined. Did you mean: 'valor'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 22:07:38)
-- CODE: 
pesos=int(ipu())

valor=pesos *0.28
print(round(valorR,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
6
---- correct output:
2.82
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    pesos=int(ipu())
              ^^^
NameError: name 'ipu' is not defined
-- TEST CASE 2:
---- input:
15
---- correct output:
7.05
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    pesos=int(ipu())
              ^^^
NameError: name 'ipu' is not defined
-- TEST CASE 3:
---- input:
9
---- correct output:
4.23
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    pesos=int(ipu())
              ^^^
NameError: name 'ipu' is not defined
-- TEST CASE 4:
---- input:
35
---- correct output:
16.45
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    pesos=int(ipu())
              ^^^
NameError: name 'ipu' is not defined
-- TEST CASE 5:
---- input:
21
---- correct output:
9.87
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    pesos=int(ipu())
              ^^^
NameError: name 'ipu' is not defined
-- TEST CASE 6:
---- input:
2
---- correct output:
0.94
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    pesos=int(ipu())
              ^^^
NameError: name 'ipu' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 22:07:40)
-- CODE: 
pesos=int(ipu())

valor=pesos *0.28
print(round(valorR,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
6
---- correct output:
2.82
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    pesos=int(ipu())
              ^^^
NameError: name 'ipu' is not defined
-- TEST CASE 2:
---- input:
15
---- correct output:
7.05
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    pesos=int(ipu())
              ^^^
NameError: name 'ipu' is not defined
-- TEST CASE 3:
---- input:
9
---- correct output:
4.23
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    pesos=int(ipu())
              ^^^
NameError: name 'ipu' is not defined
-- TEST CASE 4:
---- input:
35
---- correct output:
16.45
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    pesos=int(ipu())
              ^^^
NameError: name 'ipu' is not defined
-- TEST CASE 5:
---- input:
21
---- correct output:
9.87
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    pesos=int(ipu())
              ^^^
NameError: name 'ipu' is not defined
-- TEST CASE 6:
---- input:
2
---- correct output:
0.94
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    pesos=int(ipu())
              ^^^
NameError: name 'ipu' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 22:09:32)
-- CODE: 
pesos = int(input())

valor = pesos *0.47
print(round(valorR,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
6
---- correct output:
2.82
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(valorR,2))
                ^^^^^^
NameError: name 'valorR' is not defined. Did you mean: 'valor'?
-- TEST CASE 2:
---- input:
15
---- correct output:
7.05
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(valorR,2))
                ^^^^^^
NameError: name 'valorR' is not defined. Did you mean: 'valor'?
-- TEST CASE 3:
---- input:
9
---- correct output:
4.23
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(valorR,2))
                ^^^^^^
NameError: name 'valorR' is not defined. Did you mean: 'valor'?
-- TEST CASE 4:
---- input:
35
---- correct output:
16.45
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(valorR,2))
                ^^^^^^
NameError: name 'valorR' is not defined. Did you mean: 'valor'?
-- TEST CASE 5:
---- input:
21
---- correct output:
9.87
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(valorR,2))
                ^^^^^^
NameError: name 'valorR' is not defined. Did you mean: 'valor'?
-- TEST CASE 6:
---- input:
2
---- correct output:
0.94
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(valorR,2))
                ^^^^^^
NameError: name 'valorR' is not defined. Did you mean: 'valor'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 22:10:21)
-- CODE: 
pesos = int(input())

valoR = pesos *0.47
print(round(valorR,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
6
---- correct output:
2.82
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(valorR,2))
                ^^^^^^
NameError: name 'valorR' is not defined. Did you mean: 'valoR'?
-- TEST CASE 2:
---- input:
15
---- correct output:
7.05
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(valorR,2))
                ^^^^^^
NameError: name 'valorR' is not defined. Did you mean: 'valoR'?
-- TEST CASE 3:
---- input:
9
---- correct output:
4.23
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(valorR,2))
                ^^^^^^
NameError: name 'valorR' is not defined. Did you mean: 'valoR'?
-- TEST CASE 4:
---- input:
35
---- correct output:
16.45
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(valorR,2))
                ^^^^^^
NameError: name 'valorR' is not defined. Did you mean: 'valoR'?
-- TEST CASE 5:
---- input:
21
---- correct output:
9.87
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(valorR,2))
                ^^^^^^
NameError: name 'valorR' is not defined. Did you mean: 'valoR'?
-- TEST CASE 6:
---- input:
2
---- correct output:
0.94
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(valorR,2))
                ^^^^^^
NameError: name 'valorR' is not defined. Did you mean: 'valoR'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 22:08:55)
-- CODE: 
pesos = int(input())

valor = pesos *0.28
print(round(valorR,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
6
---- correct output:
2.82
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(valorR,2))
                ^^^^^^
NameError: name 'valorR' is not defined. Did you mean: 'valor'?
-- TEST CASE 2:
---- input:
15
---- correct output:
7.05
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(valorR,2))
                ^^^^^^
NameError: name 'valorR' is not defined. Did you mean: 'valor'?
-- TEST CASE 3:
---- input:
9
---- correct output:
4.23
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(valorR,2))
                ^^^^^^
NameError: name 'valorR' is not defined. Did you mean: 'valor'?
-- TEST CASE 4:
---- input:
35
---- correct output:
16.45
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(valorR,2))
                ^^^^^^
NameError: name 'valorR' is not defined. Did you mean: 'valor'?
-- TEST CASE 5:
---- input:
21
---- correct output:
9.87
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(valorR,2))
                ^^^^^^
NameError: name 'valorR' is not defined. Did you mean: 'valor'?
-- TEST CASE 6:
---- input:
2
---- correct output:
0.94
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(valorR,2))
                ^^^^^^
NameError: name 'valorR' is not defined. Did you mean: 'valor'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 22:09:30)
-- CODE: 
pesos = int(input())

valor = pesos *0.47
print(round(valorR,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
6
---- correct output:
2.82
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(valorR,2))
                ^^^^^^
NameError: name 'valorR' is not defined. Did you mean: 'valor'?
-- TEST CASE 2:
---- input:
15
---- correct output:
7.05
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(valorR,2))
                ^^^^^^
NameError: name 'valorR' is not defined. Did you mean: 'valor'?
-- TEST CASE 3:
---- input:
9
---- correct output:
4.23
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(valorR,2))
                ^^^^^^
NameError: name 'valorR' is not defined. Did you mean: 'valor'?
-- TEST CASE 4:
---- input:
35
---- correct output:
16.45
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(valorR,2))
                ^^^^^^
NameError: name 'valorR' is not defined. Did you mean: 'valor'?
-- TEST CASE 5:
---- input:
21
---- correct output:
9.87
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(valorR,2))
                ^^^^^^
NameError: name 'valorR' is not defined. Did you mean: 'valor'?
-- TEST CASE 6:
---- input:
2
---- correct output:
0.94
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(valorR,2))
                ^^^^^^
NameError: name 'valorR' is not defined. Did you mean: 'valor'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 22:10:36)
-- CODE: 
pesos = int(input())

valorR = pesos *0.47
print(round(valorR,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
6
---- correct output:
2.82
---- user output:
2.82
-- TEST CASE 2:
---- input:
15
---- correct output:
7.05
---- user output:
7.05
-- TEST CASE 3:
---- input:
9
---- correct output:
4.23
---- user output:
4.23
-- TEST CASE 4:
---- input:
35
---- correct output:
16.45
---- user output:
16.45
-- TEST CASE 5:
---- input:
21
---- correct output:
9.87
---- user output:
9.87
-- TEST CASE 6:
---- input:
2
---- correct output:
0.94
---- user output:
0.94
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 22:10:00)
-- CODE: 
pesos = int(input())

valor = pesos *0.47
print(round(valorR,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
6
---- correct output:
2.82
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(valorR,2))
                ^^^^^^
NameError: name 'valorR' is not defined. Did you mean: 'valor'?
-- TEST CASE 2:
---- input:
15
---- correct output:
7.05
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(valorR,2))
                ^^^^^^
NameError: name 'valorR' is not defined. Did you mean: 'valor'?
-- TEST CASE 3:
---- input:
9
---- correct output:
4.23
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(valorR,2))
                ^^^^^^
NameError: name 'valorR' is not defined. Did you mean: 'valor'?
-- TEST CASE 4:
---- input:
35
---- correct output:
16.45
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(valorR,2))
                ^^^^^^
NameError: name 'valorR' is not defined. Did you mean: 'valor'?
-- TEST CASE 5:
---- input:
21
---- correct output:
9.87
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(valorR,2))
                ^^^^^^
NameError: name 'valorR' is not defined. Did you mean: 'valor'?
-- TEST CASE 6:
---- input:
2
---- correct output:
0.94
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(valorR,2))
                ^^^^^^
NameError: name 'valorR' is not defined. Did you mean: 'valor'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 22:10:25)
-- CODE: 
pesos = int(input())

valoR = pesos *0.47
print(round(valorR,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
6
---- correct output:
2.82
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(valorR,2))
                ^^^^^^
NameError: name 'valorR' is not defined. Did you mean: 'valoR'?
-- TEST CASE 2:
---- input:
15
---- correct output:
7.05
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(valorR,2))
                ^^^^^^
NameError: name 'valorR' is not defined. Did you mean: 'valoR'?
-- TEST CASE 3:
---- input:
9
---- correct output:
4.23
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(valorR,2))
                ^^^^^^
NameError: name 'valorR' is not defined. Did you mean: 'valoR'?
-- TEST CASE 4:
---- input:
35
---- correct output:
16.45
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(valorR,2))
                ^^^^^^
NameError: name 'valorR' is not defined. Did you mean: 'valoR'?
-- TEST CASE 5:
---- input:
21
---- correct output:
9.87
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(valorR,2))
                ^^^^^^
NameError: name 'valorR' is not defined. Did you mean: 'valoR'?
-- TEST CASE 6:
---- input:
2
---- correct output:
0.94
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(valorR,2))
                ^^^^^^
NameError: name 'valorR' is not defined. Did you mean: 'valoR'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 22:08:47)
-- CODE: 
pesos = int(ipu())

valor = pesos *0.28
print(round(valorR,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
6
---- correct output:
2.82
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    pesos = int(ipu())
                ^^^
NameError: name 'ipu' is not defined
-- TEST CASE 2:
---- input:
15
---- correct output:
7.05
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    pesos = int(ipu())
                ^^^
NameError: name 'ipu' is not defined
-- TEST CASE 3:
---- input:
9
---- correct output:
4.23
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    pesos = int(ipu())
                ^^^
NameError: name 'ipu' is not defined
-- TEST CASE 4:
---- input:
35
---- correct output:
16.45
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    pesos = int(ipu())
                ^^^
NameError: name 'ipu' is not defined
-- TEST CASE 5:
---- input:
21
---- correct output:
9.87
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    pesos = int(ipu())
                ^^^
NameError: name 'ipu' is not defined
-- TEST CASE 6:
---- input:
2
---- correct output:
0.94
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    pesos = int(ipu())
                ^^^
NameError: name 'ipu' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 22:08:40)
-- CODE: 
pesos = int(ipu())

valor = pesos *0.28
print(round(valorR,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
6
---- correct output:
2.82
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    pesos = int(ipu())
                ^^^
NameError: name 'ipu' is not defined
-- TEST CASE 2:
---- input:
15
---- correct output:
7.05
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    pesos = int(ipu())
                ^^^
NameError: name 'ipu' is not defined
-- TEST CASE 3:
---- input:
9
---- correct output:
4.23
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    pesos = int(ipu())
                ^^^
NameError: name 'ipu' is not defined
-- TEST CASE 4:
---- input:
35
---- correct output:
16.45
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    pesos = int(ipu())
                ^^^
NameError: name 'ipu' is not defined
-- TEST CASE 5:
---- input:
21
---- correct output:
9.87
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    pesos = int(ipu())
                ^^^
NameError: name 'ipu' is not defined
-- TEST CASE 6:
---- input:
2
---- correct output:
0.94
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    pesos = int(ipu())
                ^^^
NameError: name 'ipu' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 22:10:27)
-- CODE: 
pesos = int(input())

valoR = pesos *0.47
print(round(valorR,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
6
---- correct output:
2.82
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(valorR,2))
                ^^^^^^
NameError: name 'valorR' is not defined. Did you mean: 'valoR'?
-- TEST CASE 2:
---- input:
15
---- correct output:
7.05
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(valorR,2))
                ^^^^^^
NameError: name 'valorR' is not defined. Did you mean: 'valoR'?
-- TEST CASE 3:
---- input:
9
---- correct output:
4.23
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(valorR,2))
                ^^^^^^
NameError: name 'valorR' is not defined. Did you mean: 'valoR'?
-- TEST CASE 4:
---- input:
35
---- correct output:
16.45
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(valorR,2))
                ^^^^^^
NameError: name 'valorR' is not defined. Did you mean: 'valoR'?
-- TEST CASE 5:
---- input:
21
---- correct output:
9.87
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(valorR,2))
                ^^^^^^
NameError: name 'valorR' is not defined. Did you mean: 'valoR'?
-- TEST CASE 6:
---- input:
2
---- correct output:
0.94
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(valorR,2))
                ^^^^^^
NameError: name 'valorR' is not defined. Did you mean: 'valoR'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 22:10:35)
-- CODE: 
pesos = int(input())

valorR = pesos *0.47
print(round(valorR,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
6
---- correct output:
2.82
---- user output:
2.82
-- TEST CASE 2:
---- input:
15
---- correct output:
7.05
---- user output:
7.05
-- TEST CASE 3:
---- input:
9
---- correct output:
4.23
---- user output:
4.23
-- TEST CASE 4:
---- input:
35
---- correct output:
16.45
---- user output:
16.45
-- TEST CASE 5:
---- input:
21
---- correct output:
9.87
---- user output:
9.87
-- TEST CASE 6:
---- input:
2
---- correct output:
0.94
---- user output:
0.94
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
